# rust-hover-preview

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build-installers.ps1  build.rs
.github/workflows/: deploy.yml  manual-deploy.yml  nightly.yml  release.yml
graphify-out/: .graphify_chunk_01.json  .graphify_chunk_manifest.json  GRAPH_REPORT.md  graph.html  graph.json
packaging/nsis/: installer.nsi
packaging/wix/: per-user-localappdata.wxs
src/: config.rs  explorer_hook.rs  main.rs  preview_window.rs  startup.rs  tray.rs
