[package]
name = "rust-hover-preview"
version = "0.1.0"
edition = "2021"
description = "Windows 11 system tray app that shows image and video previews on hover in Explorer"
authors = ["Rust Hover Preview Contributors"]
license = "MIT"
readme = "README.md"
rust-version = "1.70"
build = "build.rs"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "implement",
]}

# Image handling
image = "0.25"

# Animated GIF support
gif = "0.13"

# For async operations
once_cell = "1.19"

# For configuration storage
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
