[package]
name = "rust-hover-preview"
version = "0.1.12"
edition = "2021"
description = "Windows 11 system tray app that shows image and video previews on hover in Explorer"
authors = ["Rust Hover Preview Contributors"]
license = "MIT"
readme = "README.md"
rust-version = "1.70"
build = "build.rs"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "implement",
]}

# Image handling
image = "0.25"

# Animated WebP support via Google's libwebp
webp-animation = "0.10"

# Animated GIF support
gif = "0.13"

# For async operations
once_cell = "1.19"

# For configuration storage
configparser = "1.0"
directories = "6.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.packager]
product-name = "Rust Hover Preview"
identifier = "dev.rust-hover-preview.app"
publisher = "Rust Hover Preview Contributors"
description = "Windows 11 system tray app that shows image and video previews on hover in Explorer"
license-file = "LICENSE"
icons = ["assets/icon.ico"]
formats = ["nsis", "wix"]
out-dir = "target/packager"
binaries-dir = "target/release"
before-packaging-command = "cargo build --release"

[[package.metadata.packager.binaries]]
path = "rust-hover-preview"
main = true

[package.metadata.packager.nsis]
installMode = "currentUser"
installer-icon = "assets/icon.ico"
appdata-paths = ["$APPDATA/rust-hover-preview"]
preinstall-section = """
Section PreInstall
  StrCpy $9 "0"
  IfFileExists "$APPDATA\\rust-hover-preview\\config.ini" +2 0
    StrCpy $9 "1"
  CreateDirectory "$APPDATA\\rust-hover-preview"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "run_at_startup"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "run_at_startup" "true"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "hover_delay_ms"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "hover_delay_ms" "0"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "preview_enabled"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "preview_enabled" "true"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "enable_off_trigger_key"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "enable_off_trigger_key" "true"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "off_trigger_key"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "off_trigger_key" "alt"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "confirm_file_type"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "confirm_file_type" "false"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "follow_cursor"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "follow_cursor" "false"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "same_file_rehover_delay_ms"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "same_file_rehover_delay_ms" "750"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "transparent_background"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "transparent_background" "black"
  ReadINIStr $0 "$APPDATA\\rust-hover-preview\\config.ini" "settings" "video_volume"
  StrCmp $0 "" 0 +2
    WriteINIStr "$APPDATA\\rust-hover-preview\\config.ini" "settings" "video_volume" "0"
  StrCpy $INSTDIR "$LOCALAPPDATA\\rust-hover-preview"
  StrCmp $9 "1" 0 +2
    WriteRegStr HKCU "Software\\Microsoft\\Windows\\CurrentVersion\\Run" "RustHoverPreview" "$INSTDIR\\rust-hover-preview.exe"
  IfFileExists "$LOCALAPPDATA\\Rust Hover Preview\\rust-hover-preview.exe" 0 +2
    Delete "$LOCALAPPDATA\\Rust Hover Preview\\rust-hover-preview.exe"
  IfFileExists "$LOCALAPPDATA\\Rust Hover Preview\\uninstall.exe" 0 +2
    Delete "$LOCALAPPDATA\\Rust Hover Preview\\uninstall.exe"
  IfFileExists "$LOCALAPPDATA\\Rust Hover Preview\\uninstaller.exe" 0 +2
    Delete "$LOCALAPPDATA\\Rust Hover Preview\\uninstaller.exe"
  RMDir "$LOCALAPPDATA\\Rust Hover Preview"
SectionEnd
"""

[package.metadata.packager.wix]
template = "packaging/wix/per-user-localappdata.wxs"
languages = ["en-US"]

